WebCore/rendering/HitTestResult.h
@@ -63,7 +63,6 @@ public:
     void setIsOverWidget(bool b) { m_isOverWidget = b; }
 
     Frame* targetFrame() const;
-    IntRect boundingBox() const;
     bool isSelected() const;
     String spellingToolTip(TextDirection&) const;
     String replacedString() const;
